# PurgeBot

./: .gitignore  README.md  pyproject.toml
aws/: main.tf  providers.tf  versions.tf
bot/: main.py
purgebot/src/: KickConditions.py  Settings.py  bot.py  lambda_handler.py
purgebot/tests/: purge_bot_client_tests.py
